--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-diff-viewer": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
